# reach_roscon_2023

./: .gitignore  CMakeLists.txt  README.md  dependencies.repos  package.xml  requirements.txt
0_setup/: README.md
1_standard_reach_study/: README.md  heat_map_generator.py
1_standard_reach_study/solution/4_relax_orientation_constraint/: reach_study.yaml
1_standard_reach_study/solution/5_change_evaluator_objectives/: reach_study_config.yaml
2_pick_and_place_reach_study/: CMakeLists.txt  PNP_IKSolver.cpp  README.md  pnp_ik_solver.cpp  pnp_target_pose_generator.py  reach_study.py  reach_study.yaml
2_pick_and_place_reach_study/resources/: reach_study.xacro  reach_study.yaml  reach_study_config.rviz  setup.launch.py  setup_pnp.launch.py
2_pick_and_place_reach_study/solution/: pnp_ik_solver.cpp  pnp_target_pose_generator.py  reach_study.py  setup.launch.py
3_mobile_manipulator_reach_study/: CMakeLists.txt  README.md  mm_evaluator.cpp  reach_study.srdf  reach_study.xacro  reach_study.yaml
3_mobile_manipulator_reach_study/resources/: blade.pcd  blade.ply  joint_limits.yaml  reach_study.xacro  reach_study_config.rviz  setup_mm.launch.py  start_mm.launch.py
3_mobile_manipulator_reach_study/solution/: reach_study.srdf  reach_study.xacro  reach_study.yaml
